stream every nth sample

--- a/assets/index.html
+++ b/assets/index.html
@@ -41,7 +41,7 @@
         type="range"
         min="0"
         max="360"
-        onchange="rt.handleChange(event)"
+        oninput="rt.handleChange(event)"
       />
     </form>
   </body>
