create camera externally, add zoom slider

--- a/assets/index.html
+++ b/assets/index.html
@@ -64,6 +64,14 @@
           max="180"
           oninput="rt.handleChange(event)"
       /></label>
+      <label>
+        <span>Zoom</span>
+        <input
+          style="flex-grow: 1"
+          name="zoom"
+          type="range"
+          oninput="rt.handleChange(event)"
+      /></label>
       <button type="button" onclick="rt.randomizeColors(event)">
         Mix up colors
       </button>
