--- a/assets/index.html
+++ b/assets/index.html
@@ -65,7 +65,7 @@
           oninput="rt.handleChange(event)"
       /></label>
       <label>
-        <span>Zoom</span>
+        <span>Distance</span>
         <input
           style="flex-grow: 1"
           name="zoom"
